HPCDATAMGM-1695: Added blank row to add space between Generate button and grid

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -288,7 +288,7 @@ body.loading .overlay{
 							<div id="spinner" class="overlay"></div>
 						</div>
 					</div> <!-- Second Row end -->
-					<div class="row"  th:if="${reportRequest.getReportType() != 'USAGE_SUMMARY_BY_DATA_OWNER'}">
+					<div class="row">
 						<div class="col-md-12">&nbsp;</div>
 					</div>
 					<div class="row">
